--- a/.github/workflows/screening.yml
+++ b/.github/workflows/screening.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12' # install the python version needed
+        env: # Or as an environment variable
+          API_POLYGON: ${{ secrets.API_POLYGON }}
 
       - name: install python packages
         run: |
