--- a/.github/workflows/screening.yml
+++ b/.github/workflows/screening.yml
@@ -17,8 +17,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12' # install the python version needed
-        env: # Or as an environment variable
-          API_POLYGON: ${{ secrets.API_POLYGON }}
 
       - name: install python packages
         run: |
@@ -29,6 +27,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: execute py script # run main.py
+        env:
+          API_POLYGON: ${{ secrets.API_POLYGON }}
         run: python main.py
 
       - name: commit files
