--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-pandas
-numpy
-polygon-api-client
-requests
-yfinance==0.2.48
-matplotlib
-tabulate
+matplotlib==3.9.2
+numpy==2.0.0
+pandas==2.2.2
+peewee==3.17.5
+tabulate==0.9.0
